# core-nlp-sdk/api/openapi.yaml
@@ -32,7 +32,7 @@ paths:
       x-accepts: application/json
   /answer_question:
     post:
-      operationId: answer_question_answer_question_post
+      operationId: answer_question
       requestBody:
         content:
           application/json:
@@ -46,7 +46,7 @@ paths:
               schema:
                 items:
                   $ref: '#/components/schemas/AnswerQuestionResponse'
-                title: Response Answer Question Answer Question Post
+                title: Response Answer Question
                 type: array
           description: Successful Response
         "422":
